Small note formatting changes

--- a/.notes/devlogs/.example.md
+++ b/.notes/devlogs/.example.md
@@ -1,17 +1,9 @@
-# 📝 Topic
-
-> Header goes here
-
----
+## 📝 Topic
+Header goes here
 
 ## 💡 Body
-
 Content goes here
 
----
-
 ## 📅 Note Details
-
 - **Date:** `YYYY-MM-DD`
 - **Author:** `NAME`
----
