--- a/.notes/devlogs/0917.md
+++ b/.notes/devlogs/0917.md
@@ -1,11 +1,7 @@
-# 📝 Topic
-
-> Initial configuration and setup.
-
----
+## 📝 Topic
+Initial configuration and setup.
 
 ## 💡 Body
-
 Today was day one of setting up and configuring the laboratory for SentiNet, which was inspired by cybersecurity and the concept of cyberwarfare, where there is an attacking side and a defending side. The project also drew inspiration from games such as VALORANT and Clash of Clans, which feature strategic and warfare elements in their gameplay.
 
 SentiNet/Sentinet is a portmanteau of "Sentinel" and "Net." Two nights before this note was made, I decided to create a project like this with the assistance of GPT-5 and Copilot Pro. At first, I was excited by the premise of a small, casual project that I could pause and return to anytime—similar to a Minecraft world from my younger days, but more aligned with my profession, merging two of my greatest loves: work and play.
@@ -16,10 +12,7 @@ I did not expect the workload that came with setting up a project like this, esp
 
 I'm quite tired after this and may need time to process everything, but it is enjoyable. It reminds me of the time I would play Minecraft and grind a world for growth.
 
----
 
 ## 📅 Note Details
-
 - **Date:** `2025-09-17`
 - **Author:** `Migo`
----
