Late commit, but added resources and controllers based on Laravel onto Flask architecture for better manipulation

--- a/.notes/devlogs/0919.md
+++ b/.notes/devlogs/0919.md
@@ -4,6 +4,7 @@ Header goes here
 ## 💡 Body
 - Accessed a bash terminal inside a docker container inside a Github codespace (cloud)
 - Successfully fixed bug on SQL database not rendering properly on Docker container during docker builds
+- Started makingn resources and controllers based on Laravel architecture into Flask architecture
 
 ## 📅 Note Details
 - **Date:** `YYYY-MM-DD`
