Some more notes on unit testing and stuff

--- a/.notes/devlogs/0919.md
+++ b/.notes/devlogs/0919.md
@@ -1,11 +1,18 @@
 ## 📝 Topic
-Header goes here
+Development Progress and Refactoring
 
 ## 💡 Body
-- Accessed a bash terminal inside a docker container inside a Github codespace (cloud)
-- Successfully fixed bug on SQL database not rendering properly on Docker container during docker builds
-- Started makingn resources and controllers based on Laravel architecture into Flask architecture
+Today, I worked extensively on the SentiNet project, focusing on refining the backend architecture and addressing several bugs. Here are the highlights of the day:
+
+- Accessed a bash terminal inside a Docker container within a GitHub Codespace (cloud environment).
+- Successfully resolved an issue where the SQL database was not rendering properly during Docker builds.
+- Began transitioning resources and controllers from a Laravel-inspired architecture to a Flask-based one.
+- Integrated controllers, resources, blueprints, and other components into the Flask architecture, fixing numerous bugs along the way.
+- Added a `tests/` folder and implemented initial unit tests for controller endpoints.
+- Reorganized the Python root directory to `/server` by strategically placing `__init__.py` files. This resulted in a cleaner structure, though the `defense/` folder still requires further cleanup.
+- Logged test results under the `log/` directory for better traceability.
+
 
 ## 📅 Note Details
-- **Date:** `YYYY-MM-DD`
-- **Author:** `NAME`
+- **Date:** `2025-09-19`
+- **Author:** `Migo`
