Modified note for yesterday, added the database schema for supporting refresh tokens

--- a/.notes/devlogs/0920.md
+++ b/.notes/devlogs/0920.md
@@ -1,11 +1,12 @@
 ## 📝 Topic
-Header goes here
+SQL Database Fixes and Test Success
 
 ## 💡 Body
+This was a quick entry before I did my class for Saturday, I wanted some fixes for the database and the tests as I kind of felt bad I had failed unit tests.
 - Started fixing SQL database to make tests better
 - Added users table and altered employees table (for auth and tokenization)
 - All 24 tests are now working properly! Thank god, QA hell
 
 ## 📅 Note Details
-- **Date:** `YYYY-MM-DD`
-- **Author:** `NAME`
+- **Date:** `2025-09-20`
+- **Author:** `Migo`
