Recommitting because last commit error

--- a/.notes/devlogs/0921.md
+++ b/.notes/devlogs/0921.md
@@ -1,5 +1,5 @@
 ## 📝 Topic
-Header goes here
+Enhancing Authentication: JWT Integration and Resource-Controller Refactor Progress
 
 ## 💡 Body
 - Added login and register routes
